# raytry

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
